--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,22 @@
   color: #61dafb;
 }
 
+.button {
+  padding: 10px 15px;
+  font-size: 16px;
+  background-color:rgb(242, 242, 242);
+  color: black;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 5px;
+  margin-right: 15px;
+}
+
+.button:hover {
+  background-color: rgb(225, 222, 222);
+  transform: scale(1.01); 
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
