--- a/src/App.css
+++ b/src/App.css
@@ -31,17 +31,20 @@
 .button {
   padding: 10px 15px;
   font-size: 16px;
-  background-color:rgb(242, 242, 242);
-  color: black;
-  border: none;
+  border-color:rgb(33,150,243);
+  background-color:white;
+  color: rgb(33,150,243);
+  border: 1px solid;
   border-radius: 4px;
   cursor: pointer;
   margin-top: 5px;
   margin-right: 15px;
+  border-radius: 25px 25px 2px 25px; 
 }
 
 .button:hover {
-  background-color: rgb(225, 222, 222);
+  background-color: rgb(33,150,243);
+  color:white;
   transform: scale(1.01); 
 }
 @keyframes App-logo-spin {
@@ -51,4 +54,21 @@
   to {
     transform: rotate(360deg);
   }
+}
+.quickReplies__button {
+  border-radius: 16px 16px 2px 16px; /* Simplified border radius */
+  align-self: flex-end; /* Align to the end of the container */
+  border: 1px solid; /* Border style and width */
+  box-sizing: content-box; /* Ensure padding doesn't affect size */
+  display: flex; /* Flexbox for layout */
+  flex-shrink: 0; /* Prevent shrinking */
+  font-size: 15px; /* Text size */
+  margin-bottom: 8px; /* Space below the button */
+  max-width: 260px; /* Maximum width */
+  min-width: fit-content; /* Ensure width adjusts to content */
+  outline: none; /* Remove outline on focus */
+  padding: 9px 15px 10px; /* Padding inside the button */
+  /* text-align: left;  */
+  border-color:rgb(0, 115, 209);
+color: rgb(0, 115, 209);
 }
