--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,8 @@
   cursor: pointer;
   margin-top: 5px;
   margin-right: 15px;
-  border-radius: 25px 25px 2px 25px; 
+  /* border-radius: 25px 25px 2px 25px;  */
+  border-radius: 0;
 }
 
 .button:hover {
